# medical_device_data_agregation_system

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
deploy/: prometheus.yml
deploy/grafana/dashboards/: medical.json
deploy/grafana/provisioning/dashboards/: provider.yml
deploy/rabbitmq/: 20-prometheus.conf
docker/: Dockerfile
migrations/: env.py
migrations/versions/: 13c7f0ebf33b_initial_schema.py  720316494099_add_risk_scores.py  a1b2c3d4e5f6_add_failed_jobs_and_patient_time_index.py
scripts/: locustfile.py  render_metrics.py
src/: __init__.py  config.py  database.py  main.py  messaging.py
src/consumers/: __init__.py  __main__.py  alerts.py  runner.py  scoring.py
src/models/: __init__.py  alert.py  base.py  device.py  failed_job.py  measurement.py  outbox.py  risk_score.py
src/outbox/: __init__.py  producer.py  relay.py
src/repositories/: aggregations.py  alerts.py  devices.py  failed_jobs.py  measurements.py  patients.py  risk_scores.py
src/routes/: __init__.py  admin.py  aggregations.py  devices.py  ingestion.py  patients.py
src/schemas/: __init__.py  common.py  device.py  measurement.py  responses.py
src/services/: alerting.py  device_auth.py
tests/: __init__.py  conftest.py  helpers.py  test_auth.py  test_contracts.py  test_idempotency_concurrency.py  test_load_drain.py  test_load_scenario.py  test_reliability.py  test_risk_score.py
