[tool.poetry]
name = "seerlinq-backend"
version = "1.0.0"
description = "Medical Device Data Aggregation System"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
asyncpg = "^0.29.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
aio-pika = "^9.3.0"
alembic = "^1.18.4"
python-dotenv = "^1.0.0"
prometheus-fastapi-instrumentator = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.0"
pytest-asyncio = "^1.4.0"
black = "^23.12.1"
ruff = "^0.1.14"
httpx = "^0.26.0"
locust = "^2.44.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
# Treat warnings as errors so deprecated calls can't silently creep back in.
filterwarnings = ["error"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]
