[tool.poetry]
name = "seerlinq-backend"
version = "1.0.0"
description = "Medical Device Data Aggregation System"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.138.0"
uvicorn = {extras = ["standard"], version = "^0.49.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.51"}
asyncpg = "^0.31.0"
pydantic = "^2.13.4"
pydantic-settings = "^2.14.2"
aio-pika = "^9.6.2"
alembic = "^1.18.4"
python-dotenv = "^1.2.2"
prometheus-fastapi-instrumentator = "^8.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
pytest-asyncio = "^1.4.0"
black = "^26.5.1"
ruff = "^0.15.18"
httpx = "^0.28.1"
locust = "^2.44.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
# Treat warnings as errors so deprecated calls can't silently creep back in.
filterwarnings = ["error"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]
